corrigindo restaurante controller e testes