@@ -1,14 +1,12 @@
 package br.com.postechfiap.restaurantreservationapi.usecases.restaurante;
 
 import br.com.postechfiap.restaurantreservationapi.dto.restaurante.RestauranteResponse;
-import br.com.postechfiap.restaurantreservationapi.dto.restaurante.busca.RestauranteBuscaNomeRequest;
 import br.com.postechfiap.restaurantreservationapi.entities.Endereco;
 import br.com.postechfiap.restaurantreservationapi.entities.Restaurante;
 import br.com.postechfiap.restaurantreservationapi.enuns.TiposCozinhaEnum;
 import br.com.postechfiap.restaurantreservationapi.exception.restaurante.RestauranteNotFoundException;
 import br.com.postechfiap.restaurantreservationapi.interfaces.restaurante.RestauranteRepository;
 import br.com.postechfiap.restaurantreservationapi.validator.RestauranteValidator;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
@@ -42,12 +40,7 @@ class BuscarRestaurantesPorNomeUseCaseImplTest {
     @Mock
     private Endereco endereco;
 
-    private RestauranteBuscaNomeRequest request;
-
-    @BeforeEach
-    void setUp() {
-        request = new RestauranteBuscaNomeRequest("Nome do Restaurante");
-    }
+    static String nome = "Nome do Restaurante";
 
     @Test
     void deveRetornarRestaurantesQuandoEncontrados() {
@@ -65,36 +58,36 @@ class BuscarRestaurantesPorNomeUseCaseImplTest {
         // Lista simulada com apenas 1 Restaurante
         List<Restaurante> restaurantes = List.of(restaurante);
 
-        when(restauranteRepository.findByNomeContainingIgnoreCase(request.getNome())).thenReturn(restaurantes);
-        doNothing().when(restauranteValidator).validateNome(request.getNome());
-        doNothing().when(restauranteValidator).validateNomeTamanho(request.getNome());
+        when(restauranteRepository.findByNomeContainingIgnoreCase(nome)).thenReturn(restaurantes);
+        doNothing().when(restauranteValidator).validateNome(nome);
+        doNothing().when(restauranteValidator).validateNomeTamanho(nome);
 
         // Mockando a conversão para RestauranteResponse
         mockStatic(RestauranteResponse.class);
         when(RestauranteResponse.toDTO(any(Restaurante.class))).thenReturn(restauranteResponse);
 
         // Act
-        List<RestauranteResponse> response = buscarRestaurantesPorNomeUseCase.execute(request);
+        List<RestauranteResponse> response = buscarRestaurantesPorNomeUseCase.execute(nome);
 
         // Assert
         assertThat(response).isNotNull();
         assertThat(response.size()).isEqualTo(1);
-        assertThat(response.get(0).getNome()).isEqualTo("Nome do Restaurante");
+        assertThat(response.getFirst().getNome()).isEqualTo("Nome do Restaurante");
 
         // Verificação de chamada do repositório
-        verify(restauranteRepository).findByNomeContainingIgnoreCase(request.getNome());
+        verify(restauranteRepository).findByNomeContainingIgnoreCase(nome);
 
     }
 
     @Test
     void deveLancarExcecaoQuandoNenhumRestauranteForEncontrado() {
         // Arrange
-        when(restauranteRepository.findByNomeContainingIgnoreCase(request.getNome())).thenReturn(Collections.emptyList());
-        doNothing().when(restauranteValidator).validateNome(request.getNome());
-        doNothing().when(restauranteValidator).validateNomeTamanho(request.getNome());
+        when(restauranteRepository.findByNomeContainingIgnoreCase(nome)).thenReturn(Collections.emptyList());
+        doNothing().when(restauranteValidator).validateNome(nome);
+        doNothing().when(restauranteValidator).validateNomeTamanho(nome);
 
         // Act & Assert
-        assertThatThrownBy(() -> buscarRestaurantesPorNomeUseCase.execute(request))
+        assertThatThrownBy(() -> buscarRestaurantesPorNomeUseCase.execute(nome))
                 .isInstanceOf(RestauranteNotFoundException.class)
                 .hasMessageContaining("Restaurante não encontrado");
     }
@@ -103,65 +96,65 @@ class BuscarRestaurantesPorNomeUseCaseImplTest {
     void deveChamarValidadorDeNome() {
 
         // Arrange
-        when(restauranteRepository.findByNomeContainingIgnoreCase(request.getNome())).thenReturn(List.of(restaurante));
+        when(restauranteRepository.findByNomeContainingIgnoreCase(nome)).thenReturn(List.of(restaurante));
         lenient().when(restaurante.getEndereco()).thenReturn(endereco);
         lenient().when(endereco.getId()).thenReturn(1L);
 
 
         // Act
-        buscarRestaurantesPorNomeUseCase.execute(request);
+        buscarRestaurantesPorNomeUseCase.execute(nome);
 
         // Assert
-        verify(restauranteValidator, times(1)).validateNome(request.getNome());
-        verify(restauranteValidator, times(1)).validateNomeTamanho(request.getNome());
+        verify(restauranteValidator, times(1)).validateNome(nome);
+        verify(restauranteValidator, times(1)).validateNomeTamanho(nome);
     }
 
 
     @Test
     void deveLancarExcecaoQuandoNomeForNull() {
         // Arrange
-        RestauranteBuscaNomeRequest requestComNomeNull = new RestauranteBuscaNomeRequest(null);  // Nome com 1 caractere
+        final String nome = null;
 
         // Configurando o comportamento do mock
         doThrow(new IllegalArgumentException("O nome do restaurante não pode ser vazio ou nulo"))
-                .when(restauranteValidator).validateNome(requestComNomeNull.getNome());
+                .when(restauranteValidator).validateNome(nome);
 
 
         // Act & Assert
-        assertThatThrownBy(() -> buscarRestaurantesPorNomeUseCase.execute(requestComNomeNull))
+        assertThatThrownBy(() -> buscarRestaurantesPorNomeUseCase.execute(nome))
                 .isInstanceOf(IllegalArgumentException.class)
                 .hasMessageContaining("O nome do restaurante não pode ser vazio ou nulo");
 
         // Verifique se as validações foram chamadas
-        verify(restauranteValidator, times(1)).validateNome(requestComNomeNull.getNome());
+        verify(restauranteValidator, times(1)).validateNome(nome);
 
         // Verifique se o repositório NÃO foi chamado
-        verify(restauranteValidator, times(0)).validateNomeTamanho(requestComNomeNull.getNome());
-        verify(restauranteRepository, times(0)).findByNomeContainingIgnoreCase(requestComNomeNull.getNome());
+        verify(restauranteValidator, times(0)).validateNomeTamanho(anyString());
+        verify(restauranteRepository, times(0)).findByNomeContainingIgnoreCase(anyString());
     }
 
 
     @Test
     void deveLancarExcecaoQuandoNomeForMenorQueTresCaracteres() {
         // Arrange
-        RestauranteBuscaNomeRequest requestComNomeCurto = new RestauranteBuscaNomeRequest("A");
+        nome ="A";
 
         // Configurando o comportamento do mock
-        doNothing().when(restauranteValidator).validateNome(requestComNomeCurto.getNome());  // Primeiro mock: não faz nada
+        doNothing().when(restauranteValidator).validateNome(nome);  // Primeiro mock: não faz nada
         doThrow(new IllegalArgumentException("O nome do restaurante deve ter pelo menos 3 caracteres"))
-                .when(restauranteValidator).validateNomeTamanho(requestComNomeCurto.getNome());  // Segundo mock: lança a exceção desejada
+                .when(restauranteValidator).validateNomeTamanho(nome);  // Segundo mock: lança a exceção desejada
 
         // Act & Assert
-        assertThatThrownBy(() -> buscarRestaurantesPorNomeUseCase.execute(requestComNomeCurto))
+        assertThatThrownBy(() -> buscarRestaurantesPorNomeUseCase.execute(nome))
                 .isInstanceOf(IllegalArgumentException.class)
                 .hasMessageContaining("O nome do restaurante deve ter pelo menos 3 caracteres");
 
         // Verifique se as validações foram chamadas
-        verify(restauranteValidator, times(1)).validateNome(requestComNomeCurto.getNome());
-        verify(restauranteValidator, times(1)).validateNomeTamanho(requestComNomeCurto.getNome());
+        verify(restauranteValidator, times(1)).validateNome(nome);
+        verify(restauranteValidator, times(1)).validateNomeTamanho(nome);
 
         // Verifique se o repositório NÃO foi chamado
-        verify(restauranteRepository, times(0)).findByNomeContainingIgnoreCase(requestComNomeCurto.getNome());
+        verify(restauranteRepository, times(0)).findByNomeContainingIgnoreCase(nome);
     }
 
 
